# algorithm-utils-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/algorithm-utils-cpp/: algorithm-utils.h
scripts/: build-and-run.sh  build.sh  prepare-build.sh  run.sh
src/: main.cpp
test/: main.cpp
